fix: make markdown preview text visible in dark mode

--- a/index.css
+++ b/index.css
@@ -136,7 +136,11 @@ textarea {
   margin-bottom: 15px;
   flex-wrap: wrap;
 }
-
+/*Change made to make markdown preview text visible in dark mode*/
+body.dark-mode .toastui-editor-contents p{
+  background-color: #121212; /* or any dark shade */
+  color: #ffffff; 
+}
 .preview-section {
   background-color: white;
   padding: 20px;
